--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/slight_gray"
     android:layout_height="match_parent"
     tools:context=".MapActivity">
 
@@ -23,26 +24,6 @@
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:background="@color/pastel_blue"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_marginStart="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Places list"
-                android:textStyle="italic|bold"
-                android:textSize="20sp"/>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="3dp"
-                android:background="?android:attr/listDivider" />
-
-        </LinearLayout>
 
         <fragment
             android:name="com.example.remloc1.HomeFragments.PlacesFragment"
