--- a/app/src/main/res/layout/provide_label_layout.xml
+++ b/app/src/main/res/layout/provide_label_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -16,20 +17,21 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="-4dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:background="@drawable/bg_round_label_back">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:textSize="20sp"
-                android:text="Label"/>
+                android:text="@string/label"
+                tools:ignore="PrivateResource" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:textSize="20sp"
                 android:text=""/>
         </LinearLayout>
@@ -56,7 +58,7 @@
             android:id="@+id/checkBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Use the default value" />
+            android:text="@string/use_the_default_value" />
 
        <LinearLayout
            android:layout_width="wrap_content"
@@ -70,9 +72,9 @@
                app:backgroundTint="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:layout_marginRight="40dp"
+               android:layout_marginEnd="40dp"
                android:textSize="13sp"
-               android:text="Cancel"
+               android:text="@string/cancel"
                android:layout_gravity="center"
                android:background="@drawable/bg_round_btn_back"/>
 
@@ -83,7 +85,7 @@
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:layout_gravity="center"
-               android:text="Ok"
+               android:text="@string/ok"
                android:background="@drawable/bg_round_btn_back"/>
 
        </LinearLayout>
