--- a/app/src/main/res/layout/provide_label_layout.xml
+++ b/app/src/main/res/layout/provide_label_layout.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@null">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/bg_round_popup_back">
+    android:orientation="vertical"
+    android:background="@drawable/bg_round_popup_back">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -89,11 +85,5 @@
                android:background="@drawable/bg_round_btn_back"/>
 
        </LinearLayout>
-
-
-
-    </LinearLayout>
-
-
 
 </LinearLayout>
