--- a/app/src/main/res/layout/fragment_actions.xml
+++ b/app/src/main/res/layout/fragment_actions.xml
@@ -16,7 +16,19 @@
         android:divider="@null"
         android:dividerHeight="0dp"
         android:orientation="vertical"
-        android:padding="4dp"/>
+        android:padding="4dp">
+    </ListView>
+
+    <Button
+        android:id="@+id/btnCheckActions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginBottom="15dp"
+        android:layout_gravity="left|bottom"
+        android:text="check"
+        tools:ignore="RtlHardcoded" />
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_action"
