--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -104,23 +104,31 @@
 
     </LinearLayout>
 
-    <TextView
-        android:layout_marginTop="5dp"
-        android:layout_marginHorizontal="15dp"
+
+    <LinearLayout
+        android:id="@+id/funThing"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/gray"
-        android:text="@string/if_you_want_to_deny_a_permission_you_need_to_go_to"
+        android:orientation="vertical">
 
-        android:textSize="15sp" />
-    <TextView
-        android:layout_marginHorizontal="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/gray"
-        android:text="@string/settings_apps_remloc_permissions"
+        <TextView
+            android:layout_marginTop="5dp"
+            android:layout_marginHorizontal="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/gray"
+            android:text="@string/if_you_want_to_deny_a_permission_you_need_to_go_to"
+            android:textSize="15sp" />
+        <TextView
+            android:layout_marginHorizontal="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/gray"
+            android:text="@string/settings_apps_remloc_permissions"
+            android:textSize="15sp" />
 
-        android:textSize="15sp" />
+    </LinearLayout>
+
 
     <FrameLayout
         android:layout_width="match_parent"
