--- a/app/src/main/res/layout/fragment_actions.xml
+++ b/app/src/main/res/layout/fragment_actions.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginBottom="15dp"
         android:layout_gravity="left|bottom"
-        android:text="check"
+        android:text="@string/check"
         tools:ignore="RtlHardcoded" />
 
 
