fixed com.expample to com.remlocteam | changed firebase aunth and database

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -26,7 +26,7 @@
             android:background="@color/pastel_blue"/>
 
         <fragment
-            android:name="com.example.remloc1.HomeFragments.PlacesFragment"
+            android:name="com.remlocteam.remloc1.HomeFragments.PlacesFragment"
             android:id="@+id/placesFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
